Fixed scrollbar

--- a/style.css
+++ b/style.css
@@ -127,11 +127,11 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-  background: #1e1e24;
+  background: var(--bg-primary);
 }
 
 body::-webkit-scrollbar-thumb {
-  background: #6649b8;
+  background: var(--bg-secondary);
 }
 
 /* Navbar */
